<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ll_f_"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="12dp"
                    android:gravity="center"
                    android:text="@string/scrambling_id"
                    android:textColor="@color/black" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/et_bg"
                    android:hint="@string/input"
                    android:paddingHorizontal="12dp"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="12dp"
                    android:gravity="center"
                    android:text="@string/child_net_name"
                    android:textColor="@color/black" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/et_bg"
                    android:hint="@string/input"
                    android:paddingHorizontal="12dp"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toStartOf="@+id/scrambling_img_add">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="12dp"
                        android:gravity="center"
                        android:text="@string/scrambling_time_start"
                        android:textColor="@color/black" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/et_bg"
                        android:gravity="center"
                        android:hint="@string/scrambling_time_start"
                        android:paddingHorizontal="12dp"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/scrambling_img_add"
                    android:layout_width="48dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="12dp"
                    android:scaleType="center"
                    android:src="@drawable/activity_main_refresh_icon" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toStartOf="@+id/scrambling_img_add_end">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="12dp"
                        android:gravity="center"
                        android:text="@string/scrambling_time_end"
                        android:textColor="@color/black" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/et_bg"
                        android:gravity="center"
                        android:hint="@string/scrambling_time_end"
                        android:paddingHorizontal="12dp"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/scrambling_img_add_end"
                    android:layout_width="48dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="12dp"
                    android:scaleType="center"
                    android:src="@drawable/activity_main_refresh_icon" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="12dp"
                    android:gravity="center"
                    android:text="@string/scrambling_rate"
                    android:textColor="@color/black" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/et_bg"
                    android:hint="@string/input"
                    android:paddingHorizontal="12dp"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="12dp"
                    android:gravity="center"
                    android:text="@string/scrambling_code"
                    android:textColor="@color/black" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/et_bg"
                    android:hint="@string/input"
                    android:paddingHorizontal="12dp"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toStartOf="@+id/scrambling_img_add_loc">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="12dp"
                        android:gravity="center"
                        android:text="@string/scrambling_loc"
                        android:textColor="@color/black" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/et_bg"
                        android:gravity="center"
                        android:hint="@string/scrambling_loc"
                        android:paddingHorizontal="12dp"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/scrambling_img_add_loc"
                    android:layout_width="48dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="12dp"
                    android:scaleType="center"
                    android:src="@drawable/activity_main_refresh_icon" />
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="12dp"
            android:gravity="center"
            android:text="@string/custom_name"
            android:textColor="@color/black" />

        <ImageView
            android:id="@+id/custom_img_add_s"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="12dp"
            android:scaleType="center"
            android:src="@drawable/activity_main_add_icon" />
    </LinearLayout>
</RelativeLayout>