<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="48dp">

        <LinearLayout
            android:id="@+id/ll_f_n"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toStartOf="@+id/room_name_select">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_margin="12dp"
                        android:gravity="center"
                        android:text="@string/net_name"
                        android:textColor="@color/black" />

                    <EditText
                        android:id="@+id/net_name_et"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/et_bg"
                        android:hint="请输入*"
                        android:textColorHint="@color/red"
                        android:paddingHorizontal="12dp"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/room_name_select"
                    android:layout_width="48dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="12dp"
                    android:scaleType="center"
                    android:src="@drawable/arrow_down" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toStartOf="@+id/room_img_loc">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_margin="12dp"
                        android:gravity="center"
                        android:text="@string/room_loc"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/net_loc_tv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:hint="@string/room_loc"
                        android:paddingHorizontal="12dp"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/room_img_loc"
                    android:layout_width="48dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="12dp"
                    android:scaleType="center"
                    android:src="@drawable/activity_main_refresh_icon" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="12dp">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_margin="12dp"
                        android:gravity="center"
                        android:text="@string/room_name"
                        android:textColor="@color/black" />

                    <EditText
                        android:id="@+id/room_name_et"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/et_bg"
                        android:hint="@string/input"
                        android:paddingHorizontal="12dp"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="12dp">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_margin="12dp"
                        android:gravity="center"
                        android:text="据点信息"
                        android:textColor="@color/black" />

                    <EditText
                        android:id="@+id/room_point_et"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/et_bg"
                        android:hint="@string/input"
                        android:paddingHorizontal="12dp"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_margin="12dp"
                    android:gravity="center"
                    android:text="@string/net_details"
                    android:textColor="@color/black" />

                <ImageView
                    android:id="@+id/net_img_add"
                    android:layout_width="48dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="12dp"
                    android:scaleType="center"
                    android:src="@drawable/activity_main_add_icon" />
            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/net_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:layout_marginTop="10dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toStartOf="@+id/img_add">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_margin="12dp"
                        android:gravity="center"
                        android:text="@string/img"
                        android:textColor="@color/black" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/img_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="100dp" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/img_add"
                    android:layout_width="48dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="12dp"
                    android:scaleType="center"
                    android:src="@drawable/activity_main_add_icon" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="12dp"
            android:gravity="center"
            android:text="@string/custom_name"
            android:textColor="@color/black" />

        <ImageView
            android:id="@+id/custom_img_add_r"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="12dp"
            android:scaleType="center"
            android:src="@drawable/activity_main_add_icon" />
    </LinearLayout>
</RelativeLayout>