<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="48dp">

        <LinearLayout
            android:id="@+id/ll_tour"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toStartOf="@+id/tour_id_select">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_margin="12dp"
                        android:gravity="center"
                        android:text="ID"
                        android:textColor="@color/black" />

                    <EditText
                        android:id="@+id/tour_id_et"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/et_bg"
                        android:hint="@string/input"
                        android:paddingHorizontal="12dp"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/tour_id_select"
                    android:layout_width="48dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="12dp"
                    android:scaleType="center"
                    android:src="@drawable/arrow_down" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="12dp">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_margin="12dp"
                        android:gravity="center"
                        android:text="桩号"
                        android:textColor="@color/black" />

                    <EditText
                        android:id="@+id/tour_code_et"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/et_bg"
                        android:hint="@string/input"
                        android:paddingHorizontal="12dp"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="12dp">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_margin="12dp"
                        android:gravity="center"
                        android:text="站点"
                        android:textColor="@color/black" />

                    <EditText
                        android:id="@+id/tour_point"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/et_bg"
                        android:hint="@string/input"
                        android:paddingHorizontal="12dp"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toStartOf="@+id/tour_img_loc">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_margin="12dp"
                        android:gravity="center"
                        android:text="经纬度"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/tour_loc_tv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:hint="经纬度"
                        android:paddingHorizontal="12dp"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/tour_img_loc"
                    android:layout_width="48dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="12dp"
                    android:scaleType="center"
                    android:src="@drawable/activity_main_refresh_icon" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toStartOf="@+id/tour_img_add">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_margin="12dp"
                        android:gravity="center"
                        android:text="@string/img"
                        android:textColor="@color/black" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/tour_img_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="100dp" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/tour_img_add"
                    android:layout_width="48dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="12dp"
                    android:scaleType="center"
                    android:src="@drawable/activity_main_add_icon" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="12dp"
            android:gravity="center"
            android:text="@string/custom_name"
            android:textColor="@color/black" />

        <ImageView
            android:id="@+id/custom_img_add_tour"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="12dp"
            android:scaleType="center"
            android:src="@drawable/activity_main_add_icon" />
    </LinearLayout>
</RelativeLayout>